-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.1
-
None
-
ce1767d724e26012cfcd2eae0143ec9a87984046
Trying to add import Qt.labs.location 1.0 to an iOS app. Getting:
Undefined symbols for architecture arm64: "qInitResources_qmake_QtLocationLabs()", referenced from: initResources() in liblocationlabsplugin_debug.a(locationlabs.o) ld: symbol(s) not found for architecture arm64
| For Gerrit Dashboard: QTBUG-69617 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 241269,2 | Use the correct name for the resource when building statically | 5.11 | qt/qtlocation | Status: MERGED | +2 | 0 |