Use the correct name for the resource when building statically

Task-number: QTBUG-69617
Change-Id: I98bd56c07a5897cae62a9c287dab1cacd5f8d07d
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>